refactored after review. Changed update query for discounts.