@@ -3,6 +3,7 @@ package com.exadel.sandbox.team5.service.job;
 import com.exadel.sandbox.team5.dao.DiscountDAO;
 import com.exadel.sandbox.team5.dao.EmployeeDAO;
 import com.exadel.sandbox.team5.service.MailSenderService;
+import com.exadel.sandbox.team5.util.Notification;
 import com.exadel.sandbox.team5.util.Pair;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.MultimapBuilder;
@@ -14,7 +15,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -26,14 +27,16 @@ public class SubscriptionScheduler {
     private final DiscountDAO discountDAO;
     private final MailSenderService mailSender;
 
-    private static final int delay = 3600000 * 12;
+    private static final int DELAY = 3600000 * 12;
 
-    @Scheduled(fixedRate = delay)
+    @Scheduled(fixedRate = DELAY)
     public void senderSchedule() {
-        Multimap<String, String> emails = employeeDAO.getNewDiscounts().stream()
-                .collect(Multimaps.toMultimap(Pair::getFirst, Pair::getSecond, MultimapBuilder.treeKeys().arrayListValues()::build));
-        if (emails.isEmpty()) return;
-        emails.asMap().forEach((k, v) -> mailSender.sendEmails(k, List.copyOf(v)));
-        discountDAO.markDiscountsAsSent(emails.values().stream().toList());
+        Multimap<String, Pair> discountNamesByEmail = employeeDAO.getNotificationData().stream()
+                .collect(Multimaps.toMultimap(Notification::getEmail, x -> new Pair(x.getDiscountId(), x.getDiscountName())
+                        , MultimapBuilder.treeKeys().arrayListValues()::build));
+        if (discountNamesByEmail.isEmpty()) return;
+        discountNamesByEmail.asMap().forEach((k, v) -> mailSender.sendEmails(k, v.stream().map(Pair::getSecond).toList()));
+        discountDAO.markDiscountsAsSent(discountNamesByEmail.values().stream()
+                .map(x -> Long.parseLong(x.getFirst())).collect(Collectors.toList()));
     }
 }
